--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -5,10 +5,10 @@
       </div>
       <div class="nav-links">
         <a routerLink="/movies-all">Películas</a>
-        <a routerLink="/series">Series de TV</a>
-        <a routerLink="/genero">Género</a>
-        <a routerLink="/ano">Año</a>
-        <a routerLink="/top">Top</a>
+        <a (click)="continuara()">Series de TV</a>
+        <a (click)="continuara()">Género</a>
+        <a (click)="continuara()">Año</a>
+        <a (click)="continuara()">Top</a>
         <a routerLink="/iniciar-sesion" class="login-button" (click)="login()">Iniciar Sesión</a>
       </div>
   </nav>
