--- a/src/app/movies-detail/movies-detail.component.html
+++ b/src/app/movies-detail/movies-detail.component.html
@@ -5,6 +5,13 @@
       <div>
         <h2>{{ movie.title }}</h2>
         <p>{{ movie.overview }}</p>
+        <p>{{ movie.release_date }}</p>
+
+        <div *ngFor="let lenguage of movie.spoken_languages">
+            <p> {{ lenguage.name }} </p>
+        </div>
+
+        <p>{{ movie.release_date }}</p>
         <div class="votacion">
           <mat-icon class="star">star</mat-icon>
           <a class="numStar">{{ movie.vote_average }}</a>
