--- a/src/app/movies-popular/movies-popular.component.css
+++ b/src/app/movies-popular/movies-popular.component.css
@@ -49,3 +49,25 @@
     margin-top: 5px;
     margin-right: 5px;
   }
+
+  .filter-button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .filter-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+  }
+  
+  .filter-button:hover {
+    background-color: #0056b3;
+  }
